--- a/MPChartLib/build.gradle
+++ b/MPChartLib/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.google.gms.google-services'
 
-group='com.github.philjay'
+group = 'com.github.philjay'
 
 android {
     compileSdkVersion 28
@@ -25,6 +26,7 @@ android {
 
 dependencies {
     implementation 'androidx.annotation:annotation:1.0.0'
+    implementation 'com.google.firebase:firebase-firestore:17.1.2'
     testImplementation 'junit:junit:4.12'
 }
 
@@ -35,7 +37,7 @@ task sourcesJar(type: Jar) {
 
 task javadoc(type: Javadoc) {
     options.charSet = 'UTF-8'
-    failOnError  false
+    failOnError false
     source = android.sourceSets.main.java.sourceFiles
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
 }
